dashboard-prod/deployment.yaml
# DASHBAORD RHINO #
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-prod-deployment
  namespace: rhino-admin-prod
  labels:
    app: dashboard-prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dashboard-prod
  template:
    metadata:
      labels:
        app: dashboard-prod
    spec:
      containers:
      - name: dashboard-prod
        image: southamerica-east1-docker.pkg.dev/diesel-talon-387022/dashboard-prod/dashboard-prod:01cfed9ccb4b5b35d9162fdf91ea111abed9925e
        imagePullPolicy: Always
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "1048Mi"
            cpu: "1000m"
        ports:
        - containerPort: 80
