dashboard-prod/service.yaml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "dashboard-prod-service"
  namespace: rhino-admin-prod
  labels:
    app: dashboard-prod
spec:
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 80
  selector:
    app: dashboard-prod
  type: "NodePort"
