dashboard-prod/dashboard-prod.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rhino-admin-prod
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dashboard-prod
  name: dashboard-prod-service
  namespace: rhino-admin-prod
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: dashboard-prod
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dashboard-prod
  name: dashboard-prod-deployment
  namespace: rhino-admin-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard-prod
  template:
    metadata:
      labels:
        app: dashboard-prod
    spec:
      containers:
      - image: southamerica-east1-docker.pkg.dev/diesel-talon-387022/dashboard-prod/dashboard-prod:0.0.1
        imagePullPolicy: Always
        name: dashboard-prod
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 1000m
            memory: 1048Mi
          requests:
            cpu: 250m
            memory: 128Mi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    spec.ingressClassName: gce
  name: rhino-admin
  namespace: rhino-admin-prod
spec:
  rules:
  - host: rhino-admin.com
    http:
      paths:
      - backend:
          service:
            name: dashboard-prod-service
            port:
              number: 80
        path: /
        pathType: Prefix
